make-a-wish-salesforce/objects/In_Kind_Donation_Reimbursement__c.object
<CustomObject>
    <fields>
        <fullName>Acknowledge__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to capture the Acknowledge</description>
        <label>Acknowledge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Address_Line1__c</fullName>
        <description>This field will pull the street from the account</description>
        <formula>In_Kind_Donor_Name__r.BillingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address Line1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_1_del__c</fullName>
        <description>This field is used to capture the Address Line 1</description>
        <label>Address Line 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adjustment_Comments__c</fullName>
        <description>This field is used to capture the adjustment_comments</description>
        <label>Adjustment Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Ammount_2__c</fullName>
        <description>This will capture amount 2</description>
        <label>Amount 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_1__c</fullName>
        <description>This will capture the amount 1</description>
        <label>Amount 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_3__c</fullName>
        <description>This will capture the amount 3</description>
        <label>Amount 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_4__c</fullName>
        <description>This will capture amount 4</description>
        <label>Amount 4</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Appeal__c</fullName>
        <description>This field is used to capture the Appeal</description>
        <inlineHelpText>If this is a business donor, appeal should begin with CORP 
If this is a volunteer donor, appeal should begin with DRPS</inlineHelpText>
        <label>Appeal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approved_By__c</fullName>
        <description>stores the approved by information when wish owner or wish owner&apos;s manager approved</description>
        <label>Approved By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approved_Date__c</fullName>
        <description>stores the approved date when wish owner or wish owner&apos;s manager approved</description>
        <label>Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Attachments__c</fullName>
        <description>This field is used to identify the attachments available or not</description>
        <label>Attachments</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes- Attached</fullName>
                </value>
                <value>
                    <fullName>No- Not Available</fullName>
                </value>
                <value>
                    <fullName>Attached</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>No</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Not Available</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Yes</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <description>This field is used to capture campaign</description>
        <label>Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>This field will pull city from account</description>
        <formula>IF(! ISBLANK(In_Kind_Donor_Name__c ), In_Kind_Donor_Name__r.BillingCity , vounteer_Name__r.MailingCity)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City_del__c</fullName>
        <description>This field is used to capture the City</description>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Contact__c</fullName>
        <description>This field will populate primary contact from account</description>
        <formula>In_Kind_Donor_Name__r.Company_Contact__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>This filed will capture current login  volunteer user&apos;s country</description>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>United States</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_of_Gift__c</fullName>
        <description>This filed is used to capture the Date of Gift</description>
        <label>Date of Gift</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Submission__c</fullName>
        <description>This field is used to capture the submission date</description>
        <label>Date of Submission</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_request__c</fullName>
        <description>This field will capture the approval request date</description>
        <label>Date of request</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description_1__c</fullName>
        <description>This will capture the expense1 description</description>
        <label>Description 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description_2__c</fullName>
        <description>This will capture the expense2 description</description>
        <label>Description 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description_3__c</fullName>
        <description>This will capture the expense3 description</description>
        <label>Description 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Documentation__c</fullName>
        <description>This field is used to identify whether the document is attached or not</description>
        <label>Documentation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Available</fullName>
                </value>
                <value>
                    <fullName>Will Attach</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DonationDsc__c</fullName>
        <description>This field is used to capture Reference</description>
        <inlineHelpText>A brief description of what the donation entailed</inlineHelpText>
        <label>Donation Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>It will display the email value based on the account and volunteer contact</description>
        <formula>IF(! ISBLANK(In_Kind_Donor_Name__c ),  In_Kind_Donor_Name__r.Email__c ,  vounteer_Name__r.Email )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expense1_Description__c</fullName>
        <description>This will capture the expense1 description</description>
        <label>Expense1 Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expense2_description__c</fullName>
        <description>This will capture the expense2 description</description>
        <label>Expense2 description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expense3_Description__c</fullName>
        <description>This will capture the expense3 description</description>
        <label>Expense3 Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Export_File_Name__c</fullName>
        <description>This field is used to capture name of the export file</description>
        <label>Export File Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fund_ID__c</fullName>
        <description>This Field will pull the value from the parent wish</description>
        <formula>Wish__r.Fund_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fund ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gift_Subtype__c</fullName>
        <description>This field is used to capture the Gift Subtype</description>
        <inlineHelpText>If this is a business donor, gift subtype should begin with CORP 
If this is a volunteer donor, gift subtype should begin with DRPS</inlineHelpText>
        <label>Gift Subtype</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gift_Type__c</fullName>
        <description>This field is used to capture the Gift Type</description>
        <label>Gift Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Goods</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gift_Value__c</fullName>
        <description>This field is used to capture gift value</description>
        <label>Gift Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>In_Kind_Donor_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If donation made by a business, please add business name here. If this is a personal donation please add your name below in the &apos;Volunteer Donor&apos; field.</inlineHelpText>
        <label>Business Donor</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Please check that you have spelled the In Kind Donor name correctly and clicked the lookup magnifying glass to select from the approved list. If no match was found, please create new In Kind Donor account prior to submitting this form.</errorMessage>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>In Kind Donors</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>In-Kind Donation &amp; Reimbursement</relationshipLabel>
        <relationshipName>In_Kind_Donation_Reimbursement</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Letter_Code__c</fullName>
        <description>This field is used to capture Letter Code</description>
        <label>Letter Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Login_Users_City__c</fullName>
        <description>This filed is used to capture the current login volunteer user&apos;s city</description>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Login_users_Street__c</fullName>
        <description>This field will capture current login volunteer&apos;s street</description>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Login_users_Zip__c</fullName>
        <description>This field will capture current login user&apos;s zip</description>
        <label>Zip</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Make_check_payable_to_me__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this field checked then the current login user details will be saved automatically otherwise its override with user&apos;s entered value in the fields</description>
        <inlineHelpText>Select if you would like check to be payed to you, address details can be edited once saved</inlineHelpText>
        <label>Make check payable to me</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pay_Method__c</fullName>
        <description>This filed is used to capture the Pay Method</description>
        <label>Pay Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Credit Card</fullName>
                </value>
                <value>
                    <fullName>Debit Card</fullName>
                </value>
                <value>
                    <fullName>Net Banking</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <description>This field will pull phone from the account</description>
        <formula>IF(! ISBLANK(In_Kind_Donor_Name__c ), In_Kind_Donor_Name__r.Phone
 , vounteer_Name__r.MobilePhone)</formula>
        <label>Phone Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_for_Gift_Value_Change__c</fullName>
        <description>This field is used to capture the Reason for Gift Value Change</description>
        <label>Reason for Gift Value Change</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region_Code__c</fullName>
        <formula>Wish__r.Contact.Region_Code__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>This field will pull state from account</description>
        <formula>IF(! ISBLANK(In_Kind_Donor_Name__c ), In_Kind_Donor_Name__r.BillingState
 , vounteer_Name__r.MailingState)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_del__c</fullName>
        <description>This filed is used to capture the state</description>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Alabama</fullName>
                </value>
                <value>
                    <fullName>Alaska</fullName>
                </value>
                <value>
                    <fullName>Arizona</fullName>
                </value>
                <value>
                    <fullName>Arkansas</fullName>
                </value>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>Colorado</fullName>
                </value>
                <value>
                    <fullName>Connecticut</fullName>
                </value>
                <value>
                    <fullName>Delaware</fullName>
                </value>
                <value>
                    <fullName>District of Columbia</fullName>
                </value>
                <value>
                    <fullName>Florida</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
                <value>
                    <fullName>Hawaii</fullName>
                </value>
                <value>
                    <fullName>Idaho</fullName>
                </value>
                <value>
                    <fullName>Illinois</fullName>
                </value>
                <value>
                    <fullName>Indiana</fullName>
                </value>
                <value>
                    <fullName>Iowa</fullName>
                </value>
                <value>
                    <fullName>Kansas</fullName>
                </value>
                <value>
                    <fullName>Kentucky</fullName>
                </value>
                <value>
                    <fullName>Louisiana</fullName>
                </value>
                <value>
                    <fullName>Maine</fullName>
                </value>
                <value>
                    <fullName>Maryland</fullName>
                </value>
                <value>
                    <fullName>Massachusetts</fullName>
                </value>
                <value>
                    <fullName>Michigan</fullName>
                </value>
                <value>
                    <fullName>Minnesota</fullName>
                </value>
                <value>
                    <fullName>Mississippi</fullName>
                </value>
                <value>
                    <fullName>Missouri</fullName>
                </value>
                <value>
                    <fullName>Montana</fullName>
                </value>
                <value>
                    <fullName>Nebraska</fullName>
                </value>
                <value>
                    <fullName>Nevada</fullName>
                </value>
                <value>
                    <fullName>New Hampshire</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <description>This filed will display street value based on the account and  volunteer</description>
        <formula>IF(! ISBLANK(In_Kind_Donor_Name__c ), In_Kind_Donor_Name__r.BillingStreet, vounteer_Name__r.MailingStreet)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Street Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Reimbursement_Amount__c</fullName>
        <description>This field will gives the sum of all amount field value</description>
        <formula>Amount_1__c  +  Ammount_2__c  +  Amount_3__c  +  Amount_4__c  +  Amount_5__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Reimbursement Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Transaction_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Look up to Wish Expense transaction codes</description>
        <label>Wish Expense Transaction Code</label>
        <referenceTo>Wish_Expense_Transaction_Code__c</referenceTo>
        <relationshipLabel>In-Kind Donation &amp; Reimbursement</relationshipLabel>
        <relationshipName>In_Kind_Donation_Reimbursement</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unique_Wish_Identifier__c</fullName>
        <description>This field will pull the value from the associated parent wish</description>
        <formula>Wish__r.Unique_Wish_Record_Identifier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unique Wish Identifier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_1__c</fullName>
        <description>This field is used to get 1st  vendor details.</description>
        <label>Vendor 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_2__c</fullName>
        <description>This field is used to get 2nd vendor details</description>
        <label>Vendor 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_3__c</fullName>
        <description>This field is used to get 3rd vendor details</description>
        <label>Vendor 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Volunteer_Name__c</fullName>
        <description>This field is used to capture volunteer first name</description>
        <label>Volunteer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wish_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to capture the wish owner to send approval</description>
        <label>Wish Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>In_Kind_Donation_Reimbursement</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Wish_Owner_s_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field will capture the wish owner&apos;s manager to send for approval</description>
        <label>Wish Owner&apos;s Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>In_Kind_Donation_Reimbursement1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Wish__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field will look up to the parent wish records</description>
        <label>Wish</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Case.RecordTypeId</field>
                <operation>equals</operation>
                <value>Wish</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Case</referenceTo>
        <relationshipName>In_Kind_Donation_Reimbursement</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Wish_child_Name__c</fullName>
        <description>This field will pull wish child name from parent wish</description>
        <formula>Wish__r.Contact.FirstName + &apos; &apos; +  Wish__r.Contact.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Wish child Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <description>This field will pull the zip from account</description>
        <formula>IF(! ISBLANK(In_Kind_Donor_Name__c ), In_Kind_Donor_Name__r.BillingPostalCode
 , vounteer_Name__r.MailingPostalCode)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Zip</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_del__c</fullName>
        <description>This field is used to capture the zip</description>
        <label>Zip</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>login_users_State__c</fullName>
        <description>This field will capture current current login volunteer user&apos;s state</description>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Alabama</fullName>
                </value>
                <value>
                    <fullName>Alaska</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Arizona</fullName>
                </value>
                <value>
                    <fullName>Arkansas</fullName>
                </value>
                <value>
                    <fullName>Armed Forces Americas</fullName>
                </value>
                <value>
                    <fullName>Armed Forces Europe</fullName>
                </value>
                <value>
                    <fullName>Armed Forces Pacific</fullName>
                </value>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>Colorado</fullName>
                </value>
                <value>
                    <fullName>Connecticut</fullName>
                </value>
                <value>
                    <fullName>Delaware</fullName>
                </value>
                <value>
                    <fullName>District of Columbia</fullName>
                </value>
                <value>
                    <fullName>Federated Micronesia</fullName>
                </value>
                <value>
                    <fullName>Florida</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
                <value>
                    <fullName>Guam</fullName>
                </value>
                <value>
                    <fullName>Hawaii</fullName>
                </value>
                <value>
                    <fullName>Idaho</fullName>
                </value>
                <value>
                    <fullName>Illinois</fullName>
                </value>
                <value>
                    <fullName>Indiana</fullName>
                </value>
                <value>
                    <fullName>Iowa</fullName>
                </value>
                <value>
                    <fullName>Kansas</fullName>
                </value>
                <value>
                    <fullName>Kentucky</fullName>
                </value>
                <value>
                    <fullName>Louisiana</fullName>
                </value>
                <value>
                    <fullName>Maine</fullName>
                </value>
                <value>
                    <fullName>Marshall Islands</fullName>
                </value>
                <value>
                    <fullName>Maryland</fullName>
                </value>
                <value>
                    <fullName>Massachusetts</fullName>
                </value>
                <value>
                    <fullName>Michigan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vounteer_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If this donation was made personally, please add your name here.</inlineHelpText>
        <label>Volunteer Donor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Volunteer Contact</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>In-Kind Donation &amp; Reimbursement</relationshipLabel>
        <relationshipName>In_Kind_Donation_Reimbursement</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>In-Kind Donation &amp; Reimbursement</label>
    <nameField>
        <displayFormat>IKR-{0000}</displayFormat>
        <label>In-Kind Donation &amp; Reimbursement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>In-Kind Donation &amp; Reimbursement</pluralLabel>
    <recordTypes>
        <fullName>In_Kind_Donation</fullName>
        <active>true</active>
        <description>Use this record type when submitting an In Kind donation.</description>
        <label>In-Kind Donation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Reimbursement</fullName>
        <active>true</active>
        <description>Use this record type when submitting a request for reimbursement.</description>
        <label>Reimbursement</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>IKR_AccountName_VolunteerName_Validation</fullName>
        <active>true</active>
        <description>This validation will fire if user enter values for both In-Kind Donor Name and Volunteer Name</description>
        <errorConditionFormula>AND(!ISBLANK( In_Kind_Donor_Name__c ), !ISBLANK(vounteer_Name__c))</errorConditionFormula>
        <errorDisplayField>In_Kind_Donor_Name__c</errorDisplayField>
        <errorMessage>Please enter either the Business Donor or Volunteer Donor.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>IKR_Editing_Approved_Record_Validation</fullName>
        <active>true</active>
        <description>This validation will fire after the record is approved and try to edit the record</description>
        <errorConditionFormula>AND(NOT($Permission.Program_Supervisor ),!ISBLANK( Approved_Date__c))</errorConditionFormula>
        <errorMessage>You do not have access to edit the approved record</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>InKind_Gift_Value_Change_Validation</fullName>
        <active>true</active>
        <description>This validation used to force the enter for reason for changing the gift value</description>
        <errorConditionFormula>AND(ISCHANGED( Gift_Value__c ), ISBLANK( Reason_for_Gift_Value_Change__c ))</errorConditionFormula>
        <errorDisplayField>Reason_for_Gift_Value_Change__c</errorDisplayField>
        <errorMessage>You should enter the reason for changing the gift value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Inkind_Reimbursement_Attachment_Validati</fullName>
        <active>false</active>
        <description>This validation will fire if  there is no attachment and attachments filed value is selected as attached</description>
        <errorConditionFormula>OR(AND(!(Is_Attached__c), ISPICKVAL( Attachments__c ,&apos;Yes- Attached&apos;)),AND((Is_Attached__c), !(ISPICKVAL( Attachments__c ,&apos;Yes- Attached&apos;))))</errorConditionFormula>
        <errorDisplayField>Attachments__c</errorDisplayField>
        <errorMessage>Please add the attachment otherwise should select attachment as &apos;No&apos;, or  if attachment is added value should be Yes- Attached</errorMessage>
    </validationRules>
</CustomObject>